--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "ioredis": "^5.4.1",
+    "jotai": "^2.8.3",
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "next": "14.2.4",
@@ -23,15 +25,19 @@
     "react-base-table": "^1.13.5",
     "react-bootstrap": "^2.10.2",
     "react-cookie": "^7.1.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
