--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MONGODB_COLLECTION = users
 REDISDB_HOST = redis-19111.c253.us-central1-1.gce.redns.redis-cloud.com
 REDISDB_PORT = 19111
 REDISDB_PASSWORD = WrcnVGmeLtxpBGHVbZ9euo6UPsS0TZyY
+WEBSOCKET_PORT = 80
